IMPALA-2818: Fix cancellation crashes/hangs due to BlockOnWait() race

BlockOnWait() can be called simultaneously by multiple threads
(e.g. Fetch and Cancel RPCs), yet it is not thread-safe:

1) scoped_ptr isn't thread-safe: can corrupt the pointer state and/or
   lead to double frees.
2) thread::join() is documented as thread-unsafe.
3) the wait_thread_ can be freed by one thread while another is still
   referencing it.

These races lead to assert violations in boost/pthreads and various
crashes/hangs in impala, most likely due to memory corruption.

Make BlockOnWait() thread-safe using the lock and a cond var.  I wasn't
able to write a test that reproduces this with any higher frequency than
our current test_cancellation.py test can already repro. (IMPALA-1226
would help).

Additional testing:
- 2000 iterations of query_test/test_cancellation.py.  Prior to this
  change the failure rate seems to be on the order of 1/200.

Change-Id: I773b45d4b90e5187dd362d061e6429f4667f82de
Reviewed-on: http://gerrit.cloudera.org:8080/1920
Reviewed-by: Marcel Kornacker <marcel@cloudera.com>
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: Internal Jenkins